--- a/index.html
+++ b/index.html
@@ -74,27 +74,103 @@
       <div class="max-width">
         <h2 class="title">My Services</h2>
         <div class="services-content">
-            <div class="card">
-                <div class="box">
-                    <i class="fas fa-paint-brush"></i>
-                    <div class="text">Web Design</div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus amet expedita voluptas corrupti dicta deleniti, delectus quae optio pariatur vitae itaque porro, sit libero ipsum! Ducimus enim nobis repudiandae. Iste?</p>
-                </div>
+          <div class="card">
+            <div class="box">
+              <i class="fas fa-paint-brush"></i>
+              <div class="text">Web Design</div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Accusamus amet expedita voluptas corrupti dicta deleniti,
+                delectus quae optio pariatur vitae itaque porro, sit libero
+                ipsum! Ducimus enim nobis repudiandae. Iste?
+              </p>
             </div>
-            <div class="card">
-                <div class="box">
-                    <i class="fas fa-chart-line"></i>
-                    <div class="text">Advertising</div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus amet expedita voluptas corrupti dicta deleniti, delectus quae optio pariatur vitae itaque porro, sit libero ipsum! Ducimus enim nobis repudiandae. Iste?</p>
-                </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <i class="fas fa-chart-line"></i>
+              <div class="text">Advertising</div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Accusamus amet expedita voluptas corrupti dicta deleniti,
+                delectus quae optio pariatur vitae itaque porro, sit libero
+                ipsum! Ducimus enim nobis repudiandae. Iste?
+              </p>
             </div>
-            <div class="card">
-                <div class="box">
-                    <i class="fas fa-code"></i>
-                    <div class="text">App Design</div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus amet expedita voluptas corrupti dicta deleniti, delectus quae optio pariatur vitae itaque porro, sit libero ipsum! Ducimus enim nobis repudiandae. Iste?</p>
-                </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <i class="fas fa-code"></i>
+              <div class="text">App Design</div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Accusamus amet expedita voluptas corrupti dicta deleniti,
+                delectus quae optio pariatur vitae itaque porro, sit libero
+                ipsum! Ducimus enim nobis repudiandae. Iste?
+              </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- skills section -->
+    <section class="skills" id="skills">
+      <div class="max-width">
+        <h2 class="title">My Skills</h2>
+        <div class="skills-content">
+          <div class="column left">
+            <div class="text">My creative skills & experiences.</div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas
+              sequi a repellat eius inventore accusantium illum esse blanditiis
+              assumenda, numquam nihil sunt, quibusdam facilis laborum,
+              laboriosam quisquam placeat deleniti commodi.
+            </p>
+            <a href="#">Read more</a>
+          </div>
+          <div class="column right">
+            <div class="bars">
+              <div class="infor">
+                <span>HTML</span>
+                <span>90%</span>
+              </div>
+              <div class="line html">
+              </div>
+            </div>
+
+            <div class="bars">
+              <div class="infor">
+                <span>CSS</span>
+                <span>80%</span>
+              </div>
+              <div class="line css"></div>
+            </div>
+
+            <div class="bars">
+              <div class="infor">
+                <span>Javascript</span>
+                <span>60%</span>
+              </div>
+              <div class="line js"></div>
+            </div>
+
+            <div class="bars">
+              <div class="infor">
+                <span>PHP</span>
+                <span>70%</span>
+              </div>
+              <div class="line php"></div>
+            </div>
+
+            <div class="bars">
+              <div class="infor">
+                <span>MySQL</span>
+                <span>70%</span>
+              </div>
+              <div class="line mysql"></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
