--- a/index.html
+++ b/index.html
@@ -1,180 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>My Portfolio</title>
-    <script
-      src="https://kit.fontawesome.com/f6c15adb7e.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  </head>
 
-  <body>
-    <nav class="navbar">
-      <div class="max-width">
-        <div class="logo">
-          <a href="#">Portfo<span>lio.</span></a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>My Portfolio</title>
+  <script src="https://kit.fontawesome.com/f6c15adb7e.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+
+</head>
+
+<body>
+  <nav class="navbar">
+    <div class="max-width">
+      <div class="logo">
+        <a href="#">Portfo<span>lio.</span></a>
+      </div>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Teams</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <div class="menu-btn">
+        <i class="fas fa-bars"></i>
+      </div>
+    </div>
+  </nav>
+
+  <!-- home section -->
+  <section class="home" id="home">
+    <div class="max-width">
+      <div class="home-content">
+        <div class="text-1">Hello, My name is</div>
+        <div class="text-2">Tran Quang Hung</div>
+        <div class="text-3">And I'm a <span>Software Engineer</span></div>
+        <a href="#">Hire me</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- about section -->
+  <section class="about" id="about">
+    <div class="max-width">
+      <h2 class="title">About me</h2>
+      <div class="about-content">
+        <div class="cloumn left">
+          <img src="images/profile-1.jpeg" alt="" />
         </div>
-        <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Teams</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="menu-btn">
-          <i class="fas fa-bars"></i>
+        <div class="column right">
+          <div class="text">
+            I'm Tran Quang Hung and I'm a <span>Software Engineer</span>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            architecto corporis amet quas, sequi illo natus, deserunt
+            accusantium itaque nostrum quia fugit nihil iste, ipsa provident
+            dignissimos exercitationem in at.
+          </p>
+          <a href="#">Download CV</a>
         </div>
       </div>
-    </nav>
+    </div>
+  </section>
 
-    <!-- home section -->
-    <section class="home" id="home">
-      <div class="max-width">
-        <div class="home-content">
-          <div class="text-1">Hello, My name is</div>
-          <div class="text-2">Tran Quang Hung</div>
-          <div class="text-3">And I'm a <span>Software Engineer</span></div>
-          <a href="#">Hire me</a>
+  <!-- services section -->
+  <section class="services" id="services">
+    <div class="max-width">
+      <h2 class="title">My Services</h2>
+      <div class="services-content">
+        <div class="card">
+          <div class="box">
+            <i class="fas fa-paint-brush"></i>
+            <div class="text">Web Design</div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Accusamus amet expedita voluptas corrupti dicta deleniti,
+              delectus quae optio pariatur vitae itaque porro, sit libero
+              ipsum! Ducimus enim nobis repudiandae. Iste?
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <i class="fas fa-chart-line"></i>
+            <div class="text">Advertising</div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Accusamus amet expedita voluptas corrupti dicta deleniti,
+              delectus quae optio pariatur vitae itaque porro, sit libero
+              ipsum! Ducimus enim nobis repudiandae. Iste?
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <i class="fas fa-code"></i>
+            <div class="text">App Design</div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Accusamus amet expedita voluptas corrupti dicta deleniti,
+              delectus quae optio pariatur vitae itaque porro, sit libero
+              ipsum! Ducimus enim nobis repudiandae. Iste?
+            </p>
+          </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- about section -->
-    <section class="about" id="about">
-      <div class="max-width">
-        <h2 class="title">About me</h2>
-        <div class="about-content">
-          <div class="cloumn left">
+  <!-- skills section -->
+  <section class="skills" id="skills">
+    <div class="max-width">
+      <h2 class="title">My Skills</h2>
+      <div class="skills-content">
+        <div class="column left">
+          <div class="text">My creative skills & experiences.</div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas
+            sequi a repellat eius inventore accusantium illum esse blanditiis
+            assumenda, numquam nihil sunt, quibusdam facilis laborum,
+            laboriosam quisquam placeat deleniti commodi.
+          </p>
+          <a href="#">Read more</a>
+        </div>
+        <div class="column right">
+          <div class="bars">
+            <div class="infor">
+              <span>HTML</span>
+              <span>90%</span>
+            </div>
+            <div class="line html"></div>
+          </div>
+
+          <div class="bars">
+            <div class="infor">
+              <span>CSS</span>
+              <span>80%</span>
+            </div>
+            <div class="line css"></div>
+          </div>
+
+          <div class="bars">
+            <div class="infor">
+              <span>Javascript</span>
+              <span>60%</span>
+            </div>
+            <div class="line js"></div>
+          </div>
+
+          <div class="bars">
+            <div class="infor">
+              <span>PHP</span>
+              <span>70%</span>
+            </div>
+            <div class="line php"></div>
+          </div>
+
+          <div class="bars">
+            <div class="infor">
+              <span>MySQL</span>
+              <span>70%</span>
+            </div>
+            <div class="line mysql"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- team section -->
+  <section class="team" id="team">
+    <div class="max-width">
+      <h2 class="title">My team</h2>
+      <div class="carousel owl-carousel">
+        <div class="card">
+          <div class="box">
             <img src="images/profile-1.jpeg" alt="" />
+            <div class="text">Someone Name</div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
-          <div class="column right">
-            <div class="text">
-              I'm Tran Quang Hung and I'm a <span>Software Engineer</span>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-              architecto corporis amet quas, sequi illo natus, deserunt
-              accusantium itaque nostrum quia fugit nihil iste, ipsa provident
-              dignissimos exercitationem in at.
-            </p>
-            <a href="#">Download CV</a>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <img src="images/profile-2.jpeg" alt="" />
+            <div class="text">Someone Name</div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <img src="images/profile-3.jpeg" alt="" />
+            <div class="text">Someone Name</div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <img src="images/profile-4.jpeg" alt="" />
+            <div class="text">Someone Name</div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <img src="images/profile-5.jpeg" alt="" />
+            <div class="text">Someone Name</div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- services section -->
-    <section class="services" id="services">
-      <div class="max-width">
-        <h2 class="title">My Services</h2>
-        <div class="services-content">
-          <div class="card">
-            <div class="box">
-              <i class="fas fa-paint-brush"></i>
-              <div class="text">Web Design</div>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Accusamus amet expedita voluptas corrupti dicta deleniti,
-                delectus quae optio pariatur vitae itaque porro, sit libero
-                ipsum! Ducimus enim nobis repudiandae. Iste?
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="box">
-              <i class="fas fa-chart-line"></i>
-              <div class="text">Advertising</div>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Accusamus amet expedita voluptas corrupti dicta deleniti,
-                delectus quae optio pariatur vitae itaque porro, sit libero
-                ipsum! Ducimus enim nobis repudiandae. Iste?
-              </p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="box">
-              <i class="fas fa-code"></i>
-              <div class="text">App Design</div>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Accusamus amet expedita voluptas corrupti dicta deleniti,
-                delectus quae optio pariatur vitae itaque porro, sit libero
-                ipsum! Ducimus enim nobis repudiandae. Iste?
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+  <script src="script.js"></script>
+</body>
 
-    <!-- skills section -->
-    <section class="skills" id="skills">
-      <div class="max-width">
-        <h2 class="title">My Skills</h2>
-        <div class="skills-content">
-          <div class="column left">
-            <div class="text">My creative skills & experiences.</div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas
-              sequi a repellat eius inventore accusantium illum esse blanditiis
-              assumenda, numquam nihil sunt, quibusdam facilis laborum,
-              laboriosam quisquam placeat deleniti commodi.
-            </p>
-            <a href="#">Read more</a>
-          </div>
-          <div class="column right">
-            <div class="bars">
-              <div class="infor">
-                <span>HTML</span>
-                <span>90%</span>
-              </div>
-              <div class="line html">
-              </div>
-            </div>
-
-            <div class="bars">
-              <div class="infor">
-                <span>CSS</span>
-                <span>80%</span>
-              </div>
-              <div class="line css"></div>
-            </div>
-
-            <div class="bars">
-              <div class="infor">
-                <span>Javascript</span>
-                <span>60%</span>
-              </div>
-              <div class="line js"></div>
-            </div>
-
-            <div class="bars">
-              <div class="infor">
-                <span>PHP</span>
-                <span>70%</span>
-              </div>
-              <div class="line php"></div>
-            </div>
-
-            <div class="bars">
-              <div class="infor">
-                <span>MySQL</span>
-                <span>70%</span>
-              </div>
-              <div class="line mysql"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <script src="script.js"></script>
-  </body>
 </html>
