--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link
@@ -20,18 +21,23 @@
   </head>
 
   <body>
+    <div class="scroll-up-btn">
+      <i class="fas fa-angle-up">
+
+      </i>
+    </div>
     <nav class="navbar">
       <div class="max-width">
         <div class="logo">
-          <a href="#">Portfo<span>lio.</span></a>
+          <a href="#home">Portfo<span>lio.</span></a>
         </div>
         <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Teams</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#team">Teams</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="menu-btn">
           <i class="fas fa-bars"></i>
@@ -45,7 +51,7 @@
         <div class="home-content">
           <div class="text-1">Hello, My name is</div>
           <div class="text-2">Tran Quang Hung</div>
-          <div class="text-3">And I'm a <span>Software Engineer</span></div>
+          <div class="text-3">And I'm a <span class="typing"></span></div>
           <a href="#">Hire me</a>
         </div>
       </div>
@@ -61,7 +67,7 @@
           </div>
           <div class="column right">
             <div class="text">
-              I'm Tran Quang Hung and I'm a <span>Software Engineer</span>
+              I'm Tran Quang Hung and I'm a <span class = "typing-1"></span>
             </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
@@ -295,6 +301,11 @@
         </div>
       </div>
     </section>
+
+    <!-- footer section -->
+    <footer>
+      <span>Created By <a href="#">Tran Quang Hung</a> | <span class="far fa-copyright">2020 All rights reserved.</span></span>
+    </footer>
 
     <script src="script.js"></script>
   </body>
