--- a/index.html
+++ b/index.html
@@ -310,43 +310,36 @@
       <div class="carousel owl-carousel">
         <div class="card">
           <div class="box">
-            <img src="images/profile-1.jpg" alt="" />
-            <div class="text">Tran Quang Hung</div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <img src="images/myproject/travel.PNG" alt="" />
+            <div class="text">Landing Page</div>
+            <p><a href="https://poseidon259.github.io/travel-agency/" target="_blank">A landing page about travel agency.</a></p>
           </div>
         </div>
 
         <div class="card">
           <div class="box">
-            <img src="images/profile-1.jpg" alt="" />
-            <div class="text">Tran Quang Hung</div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <img src="images/myproject/port1.PNG" alt="" />
+            <div class="text">Portfolio 1</div>
+            <p> <a href="https://poseidon259.github.io/Portfolio-1/" target="_blank">One of my portfolios.</a> </p>
           </div>
         </div>
 
         <div class="card">
           <div class="box">
-            <img src="images/profile-1.jpg" alt="" />
-            <div class="text">Tran Quang Hung</div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <img src="images/myproject/perfume.PNG" alt="" />
+            <div class="text">Perfume Website</div>
+            <p><a href="https://github.com/poseidon259/ban-nuoc-hoa" target="_blank">The website allows adding, editing, deleting, sending mail and login.</a></p>
           </div>
         </div>
 
         <div class="card">
           <div class="box">
-            <img src="images/profile-1.jpg" alt="" />
-            <div class="text">Tran Quang Hung</div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <img src="images/myproject/port2.PNG" alt="" />
+            <div class="text">Portfolio 2</div>
+            <p><a href="https://poseidon259.github.io/Portfolio-2/">One of my portfolios.</a></p>
           </div>
         </div>
 
-        <div class="card">
-          <div class="box">
-            <img src="images/profile-1.jpg" alt="" />
-            <div class="text">Tran Quang Hung</div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
-        </div>
       </div>
     </div>
   </section>
@@ -359,10 +352,7 @@
         <div class="column left">
           <div class="text">Get in Touch</div>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et illum
-            est consectetur architecto. Consequuntur sit reiciendis labore
-            ducimus quasi inventore, repellendus tempore dolorum odit incidunt
-            laborum a voluptas nisi accusantium.
+            Please message me via the email below if you have any questions.
           </p>
           <div class="icons">
             <div class="row">
