--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             experience the professional working environment in the company. And in the future, I want to become a Team
             Leader leading a team that dedicates itself to the company.
           </p>
-          <a href="#">Download CV</a>
+          <a href="https://www.topcv.vn/xem-cv/DApXCVNSBABQXwBRCFJRWgFWBF1QD10DAAUPUw5eca" target="_blank">Download CV</a>
         </div>
       </div>
     </div>
