--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h2 class="title">About me</h2>
       <div class="about-content">
         <div class="column left">
-          <img src="images/profile-1.JPG" alt="" />
+          <img src="./images/profile-1.JPG" alt="" />
         </div>
 
         <div class="column right">
